--- a/frontend/angular-ecommerce/package.json
+++ b/frontend/angular-ecommerce/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "rxjs": "~6.5.5",
+    "rxjs-compat": "^6.0.0-rc.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
